--- a/views/html/home.html
+++ b/views/html/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../../public/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -14,10 +14,10 @@
     <header class='d-block p-2 bg-dark'>
       
         <nav class='nav p-3 mb-2'>
-            <a class="nav-link text-white h3" href="/" >Home</a> 
-            <a class="nav-link text-white h3" href="/dashboard">Dashboard</a> 
-            <a class="nav-link text-white h3" href="/login">Login</a>
-            <a class="nav-link text-white h3" href="#">Logout</a>
+            <a class="nav-link text-white h3 text-decoration-underline" href="/" >Home</a> 
+            <a class="nav-link text-white h3 text-decoration-underline" href="/dashboard">Dashboard</a> 
+            <a class="nav-link text-white h3 text-decoration-underline" href="/login">Login</a>
+            <a class="nav-link text-white h3 text-decoration-underline" href="#">Logout</a>
         </nav>  
         <h1 class='d-inline p-1 m-5 bg-success text-white rounded'>The Tech Blog</h1>
         
@@ -25,8 +25,39 @@
     </header>
 
     <main class="container container-fluid mt-5">
-      <p> Here is the body </p>
-      <p>{{{body}}}</p>
+      <div class="card bg-success text-white">
+        <figure class="text-center m-2">
+            <blockquote class="blockquote">
+                <br>
+                <h3>
+                    {{{post.name}}}
+                </h3>
+            </blockquote>
+           
+            <figcaption class="blockquote-footer">
+            <p class='text-white'>
+            Posted by {{{post.user.name}}} on {{{format_date post.date_created}}}
+            </p>
+            </figcaption>
+        </figure>
+
+        <form class='m-3 p-2'>
+          <div class="card-body">
+            <p>{{{post.content}}}</p>
+          </div>
+
+          <div class="input-group input-group-lg">
+            <span class="input-group-text">Comment</span>
+            <textarea class="form-control" id='comment' aria-label="With textarea"></textarea>
+          </div>
+          <br>
+          <div class="d-grid gap-2 col-6 mx-auto m-3">
+            <button class="btn btn-warning" id='comment-btn' type="button">Submit</button>
+          </div>
+        </form>
+      </div>
+
+      
     </main>
 
     <footer>
