change the name of the variable based on Models

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -17,7 +17,7 @@
 
     <form class='m-3 p-2'>
         <div class="card-body">
-        <p>{{{post.content}}}</p>
+        <p>{{{post.description}}}</p>
         </div>
 
         <div class="input-group input-group-lg">
@@ -26,7 +26,9 @@
         </div>
         <br>
         <div class="d-grid gap-2 col-6 mx-auto m-3">
-        <button class="btn btn-warning" id='comment-btn' type="button">Submit</button>
+        <button class="btn btn-warning" id='comment-btn' type="button">Add Comment</button>
         </div>
     </form>
 </div>
+
+<script src="/js/comment.js"></script>
