--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,7 +19,7 @@
     </figure>
     {{!-- the description of the post --}}
     <div class="card-body">
-        <p>{{{post.content}}}</p>
+        <p>{{{post.description}}}</p>
     </div>
 
 </div>
