--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -11,7 +11,7 @@
     <br>
     <div class="input-group input-group-lg">
     <span class="input-group-text">Content</span>
-    <textarea class="form-control" id='content' placeholder='{{currentPost.content}}' type="text" aria-label="With textarea"></textarea>
+    <textarea class="form-control" id='content' placeholder='{{currentPost.description}}' type="text" aria-label="With textarea"></textarea>
     </div>
     <br>
     <div class="d-grid gap-2 col-6 mx-auto m-3">
