--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -3,7 +3,7 @@
         <br>
         <h2 class='text-center m-2'>Create New Post</h2>
 
-        <form class='m-3 p-2'>
+        <form class='m-3 p-2 newpost-form'>
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">Title</span>
             <input type="text" class="form-control" id='title' aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
@@ -15,13 +15,13 @@
           </div>
           <br>
           <div class="d-grid gap-2 col-6 mx-auto m-3">
-            <button class="btn btn-warning" id='create-btn' type="button">Create</button>
+            <button class="btn btn-warning" id='create-btn' type="submit">Create</button>
           </div>
         </form>
       </div>
       <br>
       <div class ="d-grid gap-2 col-6 mx-auto">
-        <button type="button" class="btn btn-secondary" href='/post'>+ New Post</button>
+        <button type="button" class="btn btn-secondary" href='/newpost'>+ New Post</button>
       </div>
 
 <script src="./js/post.js"></script>
