--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -26,7 +26,7 @@
         </div>
         <br>
         <div class="d-grid gap-2 col-6 mx-auto m-3">
-        <button class="btn btn-warning" id='comment-btn' type="button">Add Comment</button>
+        <button class="btn btn-warning" id='comment-btn' type="submit">Add Comment</button>
         </div>
     </form>
 </div>
