--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -1,7 +1,7 @@
 <h1>Your Dashboard</h1>
 <div class="card bg-success">
 <br>
-<h2 class='text-center m-2'>Edit Post</h2>
+<h2 class='text-center m-2'>Edit Post <span id='current-post-id' value='{{currentPost.id}}'>{{currentPost.id}}</span></h2>
 
 <form class='m-3 p-2'>
     <div class="input-group input-group-lg">
@@ -15,8 +15,8 @@
     </div>
     <br>
     <div class="d-grid gap-2 col-6 mx-auto m-3">
-    <button class="btn btn-warning" id='updatepost-btn' type="button" value='{{currentPost.id}}'>Update Post</button>
-    <button class="btn btn-warning" id='deletepost-btn' type="button" value='{{currentPost.id}}'>Delete</button>
+    <button class="btn btn-warning" id='update-post' type="click" value='{{currentPost.id}}'>Update Post</button>
+    <button class="btn btn-warning" id='delete-post' type="click" value='{{currentPost.id}}'>Delete</button>
     </div>
 </form>
 </div>
