--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,7 +6,7 @@
         {{!-- The title --}}
         <blockquote class="blockquote">
             <h3>
-                <a href="/comment/{{post.id}}">{{{post.name}}}</a>
+                <a class='all-comments' href="/comment/{{post.id}}">{{{post.name}}}</a>
             </h3>
         </blockquote>
         {{!-- the created user and date --}}
@@ -25,4 +25,4 @@
 </div>
 {{/each}}
 
-<script src="./js/homepage.js"></script>
+{{!-- <script src="./js/home.js"></script> --}}
