--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,36 +5,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
-  <link rel="stylesheet" href="../../public/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class='d-block p-2 bg-dark'>
-      <nav>
+      <nav class="d-flex flex-row">
         <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
         <a class="nav-link text-white h3" href="/" >Home</a> 
         <a class="nav-link text-white h3" href="/dashboard">Dashboard</a> 
-        <a class="nav-link text-white h3" href="#">Logout</a>
+        {{#if loggedIn}}
+        <a class="nav-link text-white h3" id='logout' href="#">Logout</a>
         {{else}}
         <a class="nav-link text-white h3" href="/login">Login</a>
         <a class="nav-link text-white h3" href="/singup">Sing Up</a>
         {{/if}}
       </nav>
+      <div class='m-4'>
+        <h1 class='d-inline p-3 bg-success text-white rounded'>The Tech Blog</h1>
+      </div>
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-    <footer>
-      
-    </footer>
   </div>
 
   <!-- Render script for logged in users only -->
-  {{#if logged_in}}
+  {{#if loggedIn}}
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
