Modify Signup/Login Routes

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,7 +4,7 @@
     <div class='signup-form'>
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">Username</span>
-        <input type="text" class="form-control" id='username-signup' aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+        <input type="text" class="form-control" id='name-signup' aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
       </div>
       <br>
       <div class="input-group input-group-lg">
