--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         <a class="nav-link text-white h3" id='logout' href="#">Logout</a>
         {{else}}
         <a class="nav-link text-white h3" href="/login">Login</a>
-        <a class="nav-link text-white h3" href="/singup">Sing Up</a>
+        <a class="nav-link text-white h3" href="/signup">Sign Up</a>
         {{/if}}
       </nav>
       <div class='m-4'>
