--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -6,12 +6,12 @@
         <form class='m-3 p-2 newpost-form'>
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">Title</span>
-            <input type="text" class="form-control" id='title' aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <input type="text" class="form-control" id='newpost-title' aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
           </div>
           <br>
           <div class="input-group input-group-lg">
             <span class="input-group-text">Content</span>
-            <textarea class="form-control" id='content' aria-label="With textarea"></textarea>
+            <textarea class="form-control" id='content-for-newpost' aria-label="With textarea"></textarea>
           </div>
           <br>
           <div class="d-grid gap-2 col-6 mx-auto m-3">
