--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,21 +2,21 @@
 <h1>Your Dashboard</h1>
 <br>
 {{#if posts.length}}
-{{#each posts as |post|}}
-    <div class='card bg-success p-3'>
-        <div>
-            <a class="post-title m-3 p-2 h2 text-white" href="/updatepost/{{post.id}}">{{{post.name}}}</a>
-            <span class='position-absolute bottom-0 end-0 m-1 text-white'>{{{format_date post.date_created}}}</span>
+    {{#each posts as |post|}}
+        <div class='card bg-success p-3'>
+            <div class='comments'>
+                <a class="post-title m-3 p-2 h2 text-white" href="/updatepost/{{post.id}}">{{{post.name}}}</a>
+                <span class='position-absolute bottom-0 end-0 m-1 text-white'>{{{format_date post.date_created}}}</span>
+            </div> 
+            <br>     
         </div> 
-        <br>     
-    </div> 
-    <br>   
-{{/each}}
+        <br>   
+    {{/each}}
 {{/if}}
 
 {{!-- Add new post button --}}
     <div class ="d-grid gap-2 col-6 mx-auto">
-        <button type="button" class="btn btn-secondary" href='/post'>+ New Post</button>
+        <button type="button" class="btn btn-secondary" id='new-post' href='/newpost'>+ New Post</button>
     </div>
 
 {{!-- <script src="./js/dashboard.js"></script> --}}
