--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
       <nav class="d-flex flex-row">
         <!-- Conditionally render login or logout links -->
         <a class="nav-link text-white h3" href="/" >Home</a> 
-        <a class="nav-link text-white h3" href="/dashboard">Dashboard</a> 
-        {{#if loggedIn}}
+        {{#if logged_in}}
+        <a class="nav-link text-white h3" href="/dashboard">Dashboard</a>
         <a class="nav-link text-white h3" id='logout' href="#">Logout</a>
         {{else}}
         <a class="nav-link text-white h3" href="/login">Login</a>
@@ -34,7 +34,7 @@
   </div>
 
   <!-- Render script for logged in users only -->
-  {{#if loggedIn}}
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
