--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
+  <link rel="shortcut icon" href="#" />
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -15,6 +16,7 @@
       <nav class="d-flex flex-row">
         <!-- Conditionally render login or logout links -->
         <a class="nav-link text-white h3" href="/" >Home</a> 
+        
         {{#if logged_in}}
         <a class="nav-link text-white h3" href="/dashboard">Dashboard</a>
         <a class="nav-link text-white h3" id='logout' href="#">Logout</a>
