--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -1,12 +1,13 @@
 <h1>Your Dashboard</h1>
 <div class="card bg-success">
 <br>
-<h2 class='text-center m-2'>Edit Post <span id='current-post-id' value='{{currentPostData.id}}'>{{currentPostData.id}}</span></h2>
+<h2 class='text-center m-2'>Edit Post <span value='{{currentPostData.id}}'>{{currentPostData.id}}</span></h2>
 
 <form class='m-3 p-2'>
     <div class="input-group input-group-lg">
     <span class="input-group-text" id="inputGroup-sizing-lg">Title</span>
     <input type="text" class="form-control" id='updatepost-title' value='{{currentPostData.name}}' aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+    <input class="" type="hidden" id="post_id" value ="{{currentPostData.id}}"/>
     </div>
     <br>
     <div class="input-group input-group-lg">
