Change <textarea> to <input> to use the "value" attribute

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -13,7 +13,7 @@
         {{/each}}
         <div class="input-group input-group-lg">
         <span class="input-group-text">Comment</span>
-        <textarea class="form-control" id='comment-content' aria-label="With textarea"></textarea>
+        <input class="form-control" id='comment-content' aria-label="With input"></input>
         <input type="hidden" id='post-id-to-comment' value ="{{postData.id}}"/>
         </div>
         <br>
