--- a/views/updatepost.handlebars
+++ b/views/updatepost.handlebars
@@ -12,7 +12,7 @@
     <br>
     <div class="input-group input-group-lg">
     <span class="input-group-text">Content</span>
-    <textarea class="form-control" id='updatepost-content' placeholder='{{currentPostData.description}}' type="text" aria-label="With textarea"></textarea>
+    <input class="form-control" id='updatepost-content' placeholder='{{currentPostData.description}}' type="text" aria-label="With input"></input>
     </div>
     <br>
     <div class="d-grid gap-2 col-6 mx-auto m-3">
