--- a/views/html/home.html
+++ b/views/html/home.html
@@ -48,7 +48,7 @@
 
           <div class="input-group input-group-lg">
             <span class="input-group-text">Comment</span>
-            <textarea class="form-control" id='comment' aria-label="With textarea"></textarea>
+            <input class="form-control" id='comment' aria-label="With input"></input>
           </div>
           <br>
           <div class="d-grid gap-2 col-6 mx-auto m-3">
