--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -11,7 +11,7 @@
           <br>
           <div class="input-group input-group-lg">
             <span class="input-group-text">Content</span>
-            <textarea class="form-control" id='content-for-newpost' aria-label="With textarea"></textarea>
+            <input class="form-control" id='content-for-newpost' aria-label="With input"></input>
           </div>
           <br>
           <div class="d-grid gap-2 col-6 mx-auto m-3">
